SERVER-55648Mongos doesn't return top-level batch-write error in case of shutdown