src/mongo/s/write_ops/batch_write_exec.cpp
@@ -47,6 +47,7 @@
 #include "mongo/s/transaction_router.h"
 #include "mongo/s/write_ops/batch_write_op.h"
 #include "mongo/s/write_ops/write_error_detail.h"
+#include "mongo/util/exit.h"
 #include "mongo/util/log.h"
 
 namespace mongo {
@@ -362,6 +363,13 @@ void BatchWriteExec::executeBatch(OperationContext* opCtx,
                                            : OID());
                 } else {
                     // Error occurred dispatching, note it
+                    if (ErrorCodes::isShutdownError(responseStatus.code()) &&
+                        globalInShutdownDeprecated()) {
+                        // Throw an error since the mongos itself is shutting down so this should
+                        // be a top level error instead of a write error.
+                        uassertStatusOK(responseStatus);
+                    }
+
                     const Status status = responseStatus.withContext(
                         str::stream() << "Write results unavailable from " << shardHost);
 
